--- a/src/code/index.html
+++ b/src/code/index.html
@@ -12,7 +12,7 @@
 <body>
   <nav class="navbar navbar-expand-lg custom-navbar">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"><h2>Your Name</h2></a>
+      <a class="navbar-brand" href="index.html"><h2>anika jaylee</h2></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -44,7 +44,7 @@
     
     <div class="aboutme">
         <div class="img-container">
-                <img src="example-portfolio-copy/components/assets/images/my-photo.jpeg"> <!--Add your own image or preferred profile picture. Include either in the Github repo. -->
+                <img src=""> <!--Add your own image or preferred profile picture. Include either in the Github repo. -->
         </div>
         <div class="col">
             <h2>anikas website</h2>
