--- a/src/code/index.html
+++ b/src/code/index.html
@@ -35,7 +35,7 @@
           </li>
           </div>
           <div class="resume">
-            <a class="nav-link" href="" target="_blank" download><h4>Your Resume</h4></a> <!--Add your own resume. Include the resume in the Github repo. -->
+            <a class="nav-link" href="src/assets/Simple Professional CV Resume.png" target="_blank" download><h4>Your Resume</h4></a> <!--Add your own resume. Include the resume in the Github repo. -->
           </div>
         </div>
       </div>
@@ -48,7 +48,7 @@
         </div>
         <div class="col">
             <h2>anikas website</h2>
-            <h5>welocme</h3>
+            <h5>I'm a high school athlete at Robert Vela high school. I'm a renaissance woman with many professions.</h3>
         </div>
     </div>
 
